Edit button always visible in journals, prevents an issue that sometimes makes the sheet offset a bit when displaying the edit button and an issue that the invisible button doesn't show when you think that you mouse over it.

--- a/less/dragonbane.less
+++ b/less/dragonbane.less
@@ -167,6 +167,7 @@
 
                     .editor-edit {
                         z-index: 2;
+                        display: unset;
                     }
                 }
                 .journal-entry-page:not(.image):last-child {
